.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Module_Behaviour__mdt/SMS_Module_Behaviour__mdt.object-meta.xml
<CustomObject>
    <label>X1218 SMS Module Behaviour</label>
    <pluralLabel>SMS Module Behaviours</pluralLabel>
</CustomObject>