.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Module_Behaviour__mdt/fields/SMS_Disabled_Description__c.field-meta.xml
<CustomField>
    <fullName>SMS_Disabled_Description__c</fullName>
    <label>SMS Disabled Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>