.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Module_Behaviour__mdt/fields/SMS_Disabled_Label__c.field-meta.xml
<CustomField>
    <fullName>SMS_Disabled_Label__c</fullName>
    <label>SMS Disabled Label</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>