.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Module_Behaviour__mdt/fields/X1218_Application_SMS_Configuration__c.field-meta.xml
<CustomField>
    <fullName>X1218_Application_SMS_Configuration__c</fullName>
    <label>X1218 Application SMS Configuration</label>
    <referenceTo>Application_SMS_Configuration__mdt</referenceTo>
    <relationshipLabel>SMS Module Behaviours</relationshipLabel>
    <relationshipName>SMS_Module_Behaviours</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>